--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,261 +1,6 @@
 name = "akun-tiktok" # todo
-main = "js/_worker.js"
-compatibility_date = "2024-05-26"
-
-[unsafe.metadata.observability]
-enabled = true
-
-[observability.logs]
-enabled = true
-
-[[routes]]
-pattern = "free-cf.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "ava.game.naver.com.free-cf.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "graph.instagram.com.free-cf.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "quiz.int.vidio.com.free-cf.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "live.iflix.com.free-cf.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "support.zoom.us.free-cf.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "blog.webex.com.free-cf.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "investors.spotify.com.free-cf.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "cache.netflix.com.free-cf.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "zaintest.vuclip.com.free-cf.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "ads.ruangguru.com.free-cf.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "io.ruangguru.com.free-cf.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "api.midtrans.com.free-cf.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "investor.fb.com.free-cf.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "sublink.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "inputbugwildcard.kuota.ariyell.web.id.loss.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "inputbugwildcard.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "web.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "ava.game.naver.com.web.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "graph.instagram.com.web.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "quiz.int.vidio.com.web.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "live.iflix.com.web.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "support.zoom.us.web.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "blog.webex.com.web.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "investors.spotify.com.web.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "cache.netflix.com.web.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "zaintest.vuclip.com.web.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "ads.ruangguru.com.web.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "io.ruangguru.com.web.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "api.midtrans.com.web.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "investor.fb.com.web.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "subapi.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "loss.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "ava.game.naver.com.loss.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "graph.instagram.com.loss.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "quiz.int.vidio.com.loss.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "live.iflix.com.loss.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "support.zoom.us.loss.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "blog.webex.com.loss.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "investors.spotify.com.loss.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "cache.netflix.com.loss.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "zaintest.vuclip.com.loss.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "ads.ruangguru.com.loss.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "io.ruangguru.com.loss.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "api.midtrans.com.loss.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "investor.fb.com.loss.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "bugskti.kuota.ariyell.web.id.bxie84k3ndk.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "bugskti.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "subapi.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "bxie84k3ndk.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "ava.game.naver.com.bxie84k3ndk.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "graph.instagram.com.bxie84k3ndk.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "quiz.int.vidio.com.bxie84k3ndk.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "live.iflix.com.bxie84k3ndk.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "support.zoom.us.bxie84k3ndk.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "blog.webex.com.bxie84k3ndk.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "investors.spotify.com.bxie84k3ndk.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "cache.netflix.com.bxie84k3ndk.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "zaintest.vuclip.com.bxie84k3ndk.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "ads.ruangguru.com.bxie84k3ndk.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "io.ruangguru.com.bxie84k3ndk.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "api.midtrans.com.bxie84k3ndk.kuota.ariyell.web.id"
-custom_domain = true
-
-[[routes]]
-pattern = "investor.fb.com.bxie84k3ndk.kuota.ariyell.web.id"
-custom_domain = true
+#name = "cf-worker-connect-test" # todo
+#main = "test/worker/cf-cdn-cgi-trace2.js"
+#main = "test/worker/worker-connect-test.js"
+main = "_worker.js"
+compatibility_date = "2023-05-26"
